--- a/client/index.html
+++ b/client/index.html
@@ -577,27 +577,31 @@
 
         socket.on("directMessage", (...args) => {
             const m = args[0];
-            message_log.push(m);
-            renderChat(message_log, true);
+            if (m.senderId == current_reciever_id && current_direct) {
+                message_log.push(m);
+                renderChat(message_log, true); 
+            }
         });
 
         socket.on("newUser", (...args) => {
-            const m = args[0];
-            console.log(m);
-            while(lobby.lastChild){
-                lobby.removeChild(lobby.lastChild);
+            if (current_user_id) {
+              const m = args[0];
+                console.log(m);
+                while(lobby.lastChild){
+                    lobby.removeChild(lobby.lastChild);
+                }
+                socket.emit('getUsers',(response)=>{
+                    const users_response = response;
+                    const token = localStorage.getItem("t-box");
+                    socket.emit('getGroups',token,(groups_response)=>{
+                        console.log(groups_response.groups);
+                        console.log(users_response.users);
+                        users = users_response.users;
+                        groups = groups_response.groups;
+                        renderLobby(groups_response.groups, users_response.users);
+                    });         
+                });  
             }
-            socket.emit('getUsers',(response)=>{
-                const users_response = response;
-                const token = localStorage.getItem("t-box");
-                socket.emit('getGroups',token,(groups_response)=>{
-                    console.log(groups_response.groups);
-                    console.log(users_response.users);
-                    users = users_response.users;
-                    groups = groups_response.groups;
-                    renderLobby(groups_response.groups, users_response.users);
-                });         
-            });
         });
 
         socket.on("userChangeNickname", (...args) => {
@@ -663,15 +667,6 @@
                 document.getElementById("display-message").style.backgroundColor = m.color;
                 document.getElementById("message").style.backgroundColor = m.color;
                 document.getElementById("message-bottom").style.backgroundColor = m.color;
-            }
-        });
-
-        socket.on("isTyping", (...args) => {
-            const m = args[0];
-            if (m.typing) {
-                is_typing_box.textContent = "someone is typing";
-            } else {
-                is_typing_box.textContent = "";
             }
         });
 
