--- a/client/index.html
+++ b/client/index.html
@@ -145,7 +145,7 @@
 
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
-        const socket = io.connect("ws://192.168.43.44:5001");
+        const socket = io.connect("ws://localhost:5001");
 
         var to_logout_btn = document.getElementById('to-logout-btn');
         var to_nick_btn = document.getElementById('to-nick-btn');
